--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-es6-starter-kit",
+  "name": "react-starter-kit",
   "version": "1.0.0",
-  "description": "React ES6 Starter Kit",
+  "description": "React Starter Kit",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "serve": "webpack-dev-server --config webpack.config.js"
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,25 +18,25 @@
   },
   "homepage": "https://github.com/pawelwieladek/react-es6-starter-kit#readme",
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "css-loader": "^0.23.0",
+    "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.2",
-    "style-loader": "^0.13.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "classnames": "^2.2.1",
-    "font-awesome": "^4.5.0",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3",
-    "superagent": "^1.6.1"
+    "classnames": "^2.2.5",
+    "font-awesome": "^4.6.1",
+    "react": "^15.0.2",
+    "react-bootstrap": "^0.29.3",
+    "react-dom": "^15.0.2",
+    "superagent": "^1.8.3"
   }
 }
