--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "React Starter Kit",
   "main": "index.js",
   "scripts": {
+    "test": "mocha ./test/specs/ --compilers js:babel-register --recursive --require ./test/setup.js",
+    "prebuild": "npm run test",
     "build": "webpack --config webpack.config.js",
+    "prestart": "npm run test",
     "start": "webpack-dev-server --config webpack.config.js"
   },
   "repository": {
@@ -20,12 +23,21 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-class-properties": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.8.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.2.0",
     "file-loader": "^0.8.5",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
