--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
