--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.0.1",
     "superagent": "^1.8.3"
   }
 }
