--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.1",
+    "immutable": "^3.8.1",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
