--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
+    "jsdom": "^11.0.0",
     "file-loader": "^0.8.5",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
-    "react-dom": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
@@ -48,6 +48,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.1",
+    "prop-types": "^15.5.10",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
